--- a/public/css/partials/_about.scss
+++ b/public/css/partials/_about.scss
@@ -2,9 +2,7 @@
 #about{
 	#line{
 	    max-height: 80vh;
-	    overflow-y: auto;
-	    position: relative;
-	    overflow-x: visible;
+
 	    height: 80vh;	
 		& > div:first-of-type{
     		margin-bottom: 17px;			
