--- a/public/css/partials/_responsive.scss
+++ b/public/css/partials/_responsive.scss
@@ -284,7 +284,10 @@
 	}
 
 	#line{
-    	max-height: calc(89vh - 137px)!important;		
+    	max-height: calc(89vh - 137px)!important;	
+	    overflow-y: auto;
+	    position: relative;
+	    overflow-x: visible;    		
 	}
 	#nav #nav-items li {
 	    height: 45px!important;
